Branding, Phase and Step pages, Components

--- a/src/sass/_template.scss
+++ b/src/sass/_template.scss
@@ -1,4 +1,177 @@
 // Template
+body {
+	background-color: $grey-light;
+}
 a {
-	color: $func-blue;
+	color: $brand-blue;
+}
+p {
+	line-height: 1.5em;
+}
+
+// Buttons
+.btn {
+	@include transition;
+	border-radius: 0;
+	&-default {
+		border: 0;
+		background-color: $grey-dark-alt;
+		color: $grey-light;
+		&:hover,
+		&:focus,
+		&.active,
+		&:active {
+			background-color: darken($grey-dark-alt, 5%) !important;
+			color: $white !important;
+		}
+	}
+	&-primary {
+		background-color: $brand-red;
+		border: 0;
+		&:hover,
+		&:focus {
+			background-color: darken($brand-red, 5%);
+		}
+	}
+}
+.link-external {
+	&:after {
+		content: '\f08e';
+		font-family: $fa;
+		padding-left: 4px;
+		opacity: 0.3;
+	}
+	&:hover,
+	&:focus {
+		&:after {
+			opacity: 1;
+		}
+	}
+}
+
+// Dropdowns
+.dropdown-menu {
+	border-radius: 0;
+	border: 0;
+	margin-top: 0;
+	background-color: $grey-dark-alt;
+	& > .active {
+		a {
+			background-color: $brand-red-cta;
+			&:hover,
+			&:focus {
+				background-color: $brand-red-cta;
+			}
+		}
+	}
+	& > li {
+		& > a {
+			@include transition;
+			color: $grey-light;
+			&:hover,
+			&:focus {
+				background-color: rgba($white, 0.1);
+				color: $white;
+			}
+		}
+	}
+}
+
+// Headings
+.page-title,
+.section-title {
+	color: $grey-dark-alt;
+}
+.page-title {
+	font-weight: 400;
+}
+.section-title {
+
+}
+
+// Functional
+.success {
+	color: $func-green;
+}
+
+// --- [ LAYOUT ]
+// Content
+.content {
+	position: relative;
+	padding-top: 20px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: $size;
+	margin-left: $menu-width + 50px;
+	background-color: $white;
+	// Temp
+	max-width: 1024px;
+}
+
+
+
+// Tables
+.table-responsive {
+	margin-left: -30px;
+	margin-right: -30px;
+}
+.table {
+	table-layout: fixed;
+	thead {
+		&:first-child {
+			& > tr {
+				th {
+					&:first-child {
+						padding-left: $size;
+					}
+					&:last-child {
+						padding-right: $size;
+					}
+				}
+			}
+		}
+		th {
+			vertical-align: top !important;
+			background-color: $brand-red-cta;
+			color: $white;
+			border-bottom: 0 !important;
+			padding-bottom: 15px !important;
+		}
+	}
+	tbody {
+		tr {
+			td {
+				&:first-child {
+					padding-left: $size;
+				}
+				&:last-child {
+					padding-right: $size;
+				}
+			}
+		}
+	}
+	// Content
+	.table-step-number {
+		display: block;
+		font-size: 1.6em;
+		font-weight: 200;
+		opacity: 0.7;
+	}
+}
+// Table hover
+.table-hover {
+	& > tbody {
+		& > tr {
+			@include transition;
+		}
+	}
+}
+
+
+
+// Components
+// Video courses
+.course-format,
+.faded {
+	color: darken($grey-light, 10%);
 }
