--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,8 +9,22 @@ $func-blue: #1982c4;
 $func-red: #ff595e;
 
 // Brand colors
+$brand-red: #ff0000;
+$brand-red-cta: #e00024;
+$brand-blue: #1f4f82;
+$grey: #777777;
+$grey-dark: #333333;
+$grey-dark-alt: #3a3a3a;
+$grey-light: #dadada;
 
 // Social colors
 
 // Fonts
 $font: Helvetica, Arial, sans-serif;
+$fa: 'FontAwesome';
+
+// Layout
+$size: 30px;
+
+// Menu
+$menu-width: 300px;
