--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@
  */
 
 // Bootstrap
-// @import "bootstrap";
+@import "bootstrap";
 
 // Settings
 @import "variables";
@@ -27,7 +27,10 @@
 
 // Pages layout
 @import "header";
+@import "navigation";
 @import "layout-index";
+@import "layout-phase";
+@import "layout-step";
 @import "footer";
 
 // --------------------------------------[ style.css end ]
