--- a/src/sass/_layout-step.scss
+++ b/src/sass/_layout-step.scss
@@ -2,6 +2,9 @@
 // Page introduction
 .page-intro {
 	margin-bottom: $size * 2;
+	.page-intro-presentation {
+		max-width: 700px;
+	}
 	.page-intro-title {
 		@include clearfix;
 		text-transform: uppercase;
@@ -46,7 +49,7 @@
 			&:focus {
 				text-decoration: none;
 				.coach-img {
-					border-color: $brand-red-cta;
+					border-color: $brand-blue;
 				}
 			}
 		}
@@ -133,7 +136,6 @@
 		padding-bottom: $size;
 	}
 	.next {
-		border-right: 1px solid $grey-light;
 		padding-top: 20px;
 		padding-right: $size;
 		padding-bottom: $size;
