--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,11 +1,55 @@
 // Nav
+// Nav tabs
+.nav-tabs {
+	background-color: $grey-light;
+	& > li {
+		a {
+			@include transition;
+			border-radius: 0;
+			background-color: $grey-dark-alt;
+			color: $white;
+			font-weight: 500;
+			margin-right: 1px;
+			padding: 20px 15px;
+			@include breakpoint(lg) {
+				font-size: 1.1em;
+			}
+			&:hover,
+			&:focus {
+				background-color: $grey-dark;
+				border-color: transparent;
+				border-bottom-color: $brand-red-cta;
+				.icon {
+					color: $brand-red-cta;
+				}
+			}
+			.icon {
+				@include transition;
+				font-size: 1.2em;
+			}
+		}
+		&.active {
+			a {
+				color: $brand-red-cta;
+			}
+		}
+	}
+}
+
+// Nav main
 .nav-main {
-	position: fixed;
-	width: $menu-width;
+	position: absolute;
 	background-color: $white;
 	padding: $size / 2;
+	padding-top: $size;
 	height: 100%;
 	overflow-y: auto;
+	.menu-open & {
+		width: $menu-width;
+	}
+	.menu-closed & {
+		width: $menu-width / 5;
+	}
 }
 .lead {
 	padding-top: 20px;
@@ -18,6 +62,9 @@
 			background-color: $brand-red;
 			border-color: $brand-red;
 			color: $white;
+		}
+		& > a {
+			color: $brand-red-cta;
 		}
 	}
 	&:before {
@@ -56,12 +103,18 @@
 .menu-item-title {
 	display: inline-flex;
 	max-width: 80%;
+	.menu-closed & {
+		display: none;;
+	}
 }
 
 // Submenu
 .submenu-nav {
 	list-style-type: decimal-leading-zero;
 	padding-left: $size * 2 +7px;
+	.menu-closed & {
+		display: none;
+	}
 	li {
 		padding-top: $size / 6;
 		padding-bottom: $size / 6;
@@ -95,6 +148,13 @@
 		font-weight: 500;
 		a {
 			color: $brand-red-cta;
+		}
+	}
+	& > a {
+		color: $grey;
+		&:hover,
+		&:focus {
+			// text-decoration: none;
 		}
 	}
 }
