--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -316,10 +316,18 @@ $screen-lg-min:              $screen-lg !default;
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 $screen-lg-desktop:          $screen-lg-min !default;
 
+// XLarge screen / wide desktop
+//** Deprecated `$screen-xl` as of v3.0.1
+$screen-xl:                  1400px !default;
+$screen-xl-min:              $screen-xl !default;
+//** Deprecated `$screen-xl-desktop` as of v3.0.1
+$screen-xl-desktop:          $screen-xl-min !default;
+
 // So media queries don't overlap when required, provide a maximum
 $screen-xs-max:              ($screen-sm-min - 1) !default;
 $screen-sm-max:              ($screen-md-min - 1) !default;
 $screen-md-max:              ($screen-lg-min - 1) !default;
+$screen-lg-max:              ($screen-xl-min - 1) !default;
 
 
 //== Grid system
@@ -355,6 +363,11 @@ $container-md:                 $container-desktop !default;
 $container-large-desktop:      (1140px + $grid-gutter-width) !default;
 //** For `$screen-lg-min` and up.
 $container-lg:                 $container-large-desktop !default;
+
+// Large screen / wide desktop
+$container-xlarge-desktop:      (1300px + $grid-gutter-width) !default;
+//** For `$screen-lg-min` and up.
+$container-xl:                 $container-xlarge-desktop !default;
 
 
 //== Navbar
