Schedule izmjene layouta

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -153,6 +153,14 @@
 			color: $brand-red-cta;
 		}
 	}
+	&.disabled {
+		&:hover,
+		&:focus {
+			&:before {
+				background-color: transparent;
+			}
+		}
+	}
 	& > a {
 		color: $grey;
 		&:hover,
