--- a/src/sass/_template.scss
+++ b/src/sass/_template.scss
@@ -71,10 +71,10 @@ a[target="_blank"] {
 	background-color: $grey-dark-alt;
 	& > .active {
 		a {
-			background-color: $brand-red-cta;
+			background-color: $brand-red;
 			&:hover,
 			&:focus {
-				background-color: $brand-red-cta;
+				background-color: $brand-red;
 			}
 		}
 	}
@@ -159,7 +159,7 @@ a[target="_blank"] {
 		}
 		th {
 			vertical-align: top !important;
-			background-color: $brand-red-cta;
+			background-color: $brand-red;
 			color: $white;
 			border-bottom: 0 !important;
 			padding-bottom: 15px !important;
@@ -173,6 +173,15 @@ a[target="_blank"] {
 				}
 				&:last-child {
 					padding-right: $size;
+				}
+				&.not-first-child {
+					padding-left: 8px;
+				}
+				&[valign="middle"] {
+					vertical-align: middle !important;
+				}
+				ol {
+					padding-left: 15px;
 				}
 			}
 		}
@@ -190,6 +199,17 @@ a[target="_blank"] {
 		font-size: 1.6em;
 		font-weight: 200;
 		opacity: 0.7;
+	}
+	.table-container {
+		padding: 0;
+		.table {
+			margin-bottom: 0;
+			tr {
+				& > td {
+					border-left-width: 0;
+				}
+			}
+		}
 	}
 }
 // Table hover
@@ -229,14 +249,20 @@ a[target="_blank"] {
 			right: 0;
 			top: 0;
 			padding: 0 0.7em;
-			background-color: $brand-red-cta;
+			background-color: $brand-red;
 			line-height: 38px;
 			font-size: 22px;
 		}
 	}
 	& > .list-group {
-		border: 1px solid $grey-light;
+		// border: 1px solid $grey-light;
 		border-top: 0;	
+		.list-group-item {
+			padding: 8px 15px;
+			ul {
+				margin-bottom: 10px;
+			}
+		}
 	}
 }
 
