--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,8 +9,7 @@ $func-blue: #1982c4;
 $func-red: #ff595e;
 
 // Brand colors
-$brand-red: #ff0000;
-$brand-red-cta: #e00024;
+$brand-red: #e00024;
 $brand-blue: #1f4f82;
 $grey: #777777;
 $grey-dark: #333333;
